[package]
name = "menu"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", optional = true , features = ["blocking"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
anyhow = "1.0.98"

[features]
default = []
write = ["dep:reqwest", "dep:serde_json"]
