[package]
name = "menu"
version = "0.1.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.12.23", optional = true , features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["local-offset", "serde"] }
toml = "0.9.3"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
rusty-hook = "^0.11.2"

[features]
default = []
write = ["dep:reqwest", "dep:serde_json"]
address = ["dep:reqwest"]